[project]
name = "async-rl-lab"
version = "0.1.0"
description = "Mini async GRPO-family RL lab for LLM and agentic systems"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ydnysh", email = "yadnyesh.g.c@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
hf = [
    "torch>=2.4",
    "transformers>=4.45",
]

[project.scripts]
async-rl-demo = "async_rl_lab.demo:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
